--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nodes_list",
-  "homepage": "http://di-112.github.io/toDoListReact",
+  "homepage": "http://di-112.github.io/to-do-list-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
